commit 4 - preloader scrollbar, fix slot 412x732

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,12 @@ body._loaded {
   padding: 0.625rem;
   background: radial-gradient(63.49% 84.68% at 50% 50.01%, #1b52e0 0%, #1b5bd7 19.95%, #1f34a3 52.89%, #000080 81.04%, #000080 100%);
 }
+.acces-preloader__inner::-webkit-scrollbar {
+  width: 10px;
+}
+.acces-preloader__inner::-webkit-scrollbar-thumb {
+  background: url("../img/main/ice.svg") center/contain no-repeat;
+}
 .acces-preloader__text {
   padding-bottom: 0.375rem;
 }
@@ -485,11 +491,21 @@ body._loaded {
     padding-top: calc(20vh - 10px);
   }
 }
+@media (min-width: 25.625em) and (max-height: 46.25em) {
+  .game__column .slotMachineContainer {
+    padding-top: calc(22vh - 10px);
+  }
+}
 .game__column_two {
   flex: 0 1 25%;
 }
 .game__column_two .slotMachineContainer {
   padding-top: calc(18vh - 10px);
+}
+@media (min-width: 25.625em) and (max-height: 46.25em) {
+  .game__column_two .slotMachineContainer {
+    padding-top: calc(21vh - 10px);
+  }
 }
 .game__column_two:not(:last-child)::after {
   content: "";
